--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@livekit/components-react": "^2.9.3",
     "@livekit/components-styles": "^1.1.5",
     "livekit-client": "^2.11.3",
+    "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
